[package]
name = "cai"
version = "0.1.0"
description = "The fastest CLI tool for prompting LLMs (powered by Groq AI)"
keywords = ["llm", "ai", "cli", "prompt", "groq", "openai", "chatgpt", "gpt-4"]
categories = [
  "command-line-utilities",
  "text-processing",
]
license = "ISC"
repository = "https://github.com/ad-si/cai"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.2", features = ["json"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
textwrap = {version = "0.16.1", features = ["terminal_size"]}
tokio = {version = "1.37.0", features = ["rt-multi-thread", "macros"]}
