[package]
name = "cai"
version = "0.10.0"
description = "The fastest CLI tool for prompting LLMs"
keywords = ["llm", "ai", "cli", "ml", "gpt"]
categories = ["command-line-utilities", "text-processing"]
license = "ISC"
repository = "https://github.com/ad-si/cai"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
color-print = "0.3.5"
config = "0.14.0"
reqwest = { version = "0.12.2", features = ["json"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
textwrap = { version = "0.16.1", features = ["terminal_size"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.38"
xdg = "2.5.2"
futures = "0.3.30"
bat = "0.24.0"
assert_cmd = "2.0.14"
predicates = "3.1.0"
pdf-extract = "0.7.4"
base64 = "0.22.1"
whoami = "1.6.0"
